Mark enum-sequential? as a local function
The function enum-sequential? is only used within enum.scm, and there's
unlikely to be a reason why it would be used outside.  Mark the function
as local (with the '/' prefix).

ChangeLog:

	* enum.scm (enum-sequential?): Rename to...
	(/enum-sequential?): ...this.
	(gen-enum-decl): Update call for new name /enum-sequential?.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-03-02  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* enum.scm (enum-sequential?): Rename to...
+	(/enum-sequential?): ...this.
+	(gen-enum-decl): Update call for new name /enum-sequential?.
+
 2021-02-01  Mike Frysinger  <vapier@gentoo.org>
 
 	* sim-decode.scm (TRACE_EXTRACT): Rename to ...
