--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-02-11  Alan Modra  <amodra@gmail.com>
+
+	* utils.scm: Update emitted copyright dates.
+
 2019-05-14  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
 	* opcodes.scm (gen-ifield-default-type): Use int64_t for fields
