--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-05-21  Alan Modra  <amodra@gmail.com>
+
+	* desc-cpu.scm (@arch@_cgen_cpu_close): Free without first
+	checking for non-NULL.
+
 2020-02-11  Alan Modra  <amodra@gmail.com>
 
 	* utils.scm: Update emitted copyright dates.
