--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-05-29  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* desc-cpu.scm (/gen-cpu-open): Support passing the instruction
+	endianness to cgen_cpu_open.
+
 2020-05-21  Alan Modra  <amodra@gmail.com>
 
 	* desc-cpu.scm (@arch@_cgen_cpu_close): Free without first
