--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-01-01  Alan Modra  <amodra@gmail.com>
+
+	* utils.scm (copyright-fsf, copyright-red-hat): Update emitted
+	copyright dates.
+
 2020-05-29  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* desc-cpu.scm (/gen-cpu-open): Support passing the instruction
