--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-02-01  Mike Frysinger  <vapier@gentoo.org>
+
+	* sim-decode.scm (TRACE_EXTRACT): Rename to ...
+	(CGEN_TRACE_EXTRACT): ... this.
+
 2021-01-01  Alan Modra  <amodra@gmail.com>
 
 	* utils.scm (copyright-fsf, copyright-red-hat): Update emitted
