insn.scm: Add missing brackets
A set of brackets were missing.  This doesn't seem to be causing
problems with guile 1.8, but when we move to guile 2+ this will cause
an error.

ChangeLog:

	* insn.scm (/sub-insn-make!): Wrap call to logit in brackets.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* insn.scm (/sub-insn-make!): Wrap call to logit in brackets.
+
 2021-02-01  Mike Frysinger  <vapier@gentoo.org>
 
 	* sim-decode.scm (TRACE_EXTRACT): Rename to ...
