--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* pgmr-tools.scm (pgmr-lookup-insn): Ensure local defines occur
+	before the function body.
+
+2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* rtx-funcs.scm (def-rtx-funcs): Don't try to let-bind macros,
 	instead use long form macro names throughout.
 
