--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* guile.scm (eval1): Unconditionally define as we no longer
+	support versions of guile before 1.8.
+
+2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* cos.scm (/object-count-true): Move inside define-class macro.
 	(/parse-member-list): Likewise.
 	(/build-getter-defs): Likewise.
