Use provided? instead of feature?
The feature? function is deprecated, instead provided? should be
used.  We only use feature? in one place, so just change that to use
provided? instead.

ChangeLog:

	* read.scm (/cgen): Use provided? not feature?.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* read.scm (/cgen): Use provided? not feature?.
+
+2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* cos.scm (/elm-make-method-getter): Delete.
 	(elm-get): Remove use of /elm-make-method-getter.
 	(/elm-make-method-setter): Delete.
