--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* guile.scm (cgen-debugging-stack-start): Always print the
+	backtrace no matter the argument count, use display-backtrace and
+	make-stack instead of save-stack and backtrace.  Remove a comment
+	that I think no longer applies.  Remove use of start-stack.
+
+2021-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* enum.scm (gen-enum-decl): Build a string, rather than a string
 	list, within the recursive core of this function.
 
